fixed scrolling bug on mobile

--- a/src/components/AddQuestion/style.scss
+++ b/src/components/AddQuestion/style.scss
@@ -6,6 +6,7 @@
 	height: 100%;
 	position: relative;
 	form {
+		height: 70%;
 		width: 80%;
 		display: flex;
 		flex-direction: column;
